Whoops this one too

--- a/readme.org
+++ b/readme.org
@@ -25,8 +25,7 @@ Shell enhancements for =Emacs=.
 
    #+begin_src elisp
    (use-package shell+
-     :straight (:host github :repo "0x0049/shell-plus")
-     :after timer+)
+     :straight (:host github :repo "0x0049/shell-plus"))
    #+end_src
 
    To bind a key for the search history, try:
