Remove autoload on hook
It won't work since the function it hooks needs to be autoloaded. But
that's not necessary since the only way the hooked code is useful is if
another of the autoloaded functions was called (since it sets the
history file without which the hooked function does nothing).

--- a/readme.org
+++ b/readme.org
@@ -25,7 +25,8 @@ Shell enhancements for =Emacs=.
 
    #+begin_src elisp
    (use-package shell+
-     :straight (:host github :repo "0x0049/shell-plus"))
+     :straight (:host github :repo "0x0049/shell-plus")
+     :defer t)
    #+end_src
 
    To bind a key for the search history, try:
